# pixi-build-backends

./: .gitattributes  .gitignore  Cargo.toml  README.md  lefthook.yaml  mkdocs.yml  pixi.toml
.github/workflows/: build-upload.yml  docs.yml  lint.yml  python-bindings.yml  ros-build.yml  rust.yml  testsuite.yml
backends/pixi-build-ros/: pixi.toml  pyproject.toml  robostack.yaml
backends/pixi-build-ros/src/pixi_build_ros/: build_script.py  config.py  distro.py  metadata_provider.py  ros_generator.py  utils.py
backends/pixi-build-ros/templates/: bld_ament_cmake.bat  bld_ament_python.bat  build_ament_cmake.sh  build_ament_python.sh  build_ament_python.sh.in  build_catkin.sh
backends/pixi-build-ros/tests/: conftest.py  test_distro.py  test_meta_data_provider.py  test_package_map.py  test_package_xml.py  test_spec_merging.py  test_version_constraints.py
backends/pixi-build-ros/tests/__snapshots__/: test_package_xml.ambr  test_version_constraints.ambr
backends/pixi-build-ros/tests/data/: other_package_map.yaml
backends/pixi-build-ros/tests/data/package_xmls/: custom_ros.xml
crates/pixi-build-backend/: Cargo.toml
crates/pixi-build-backend/src/: cli.rs  compilers.rs  dependencies.rs  generated_recipe.rs  intermediate_backend.rs  lib.rs  protocol.rs  rattler_build_integration.rs  server.rs  specs_conversion.rs  tools.rs
crates/pixi-build-backend/src/traits/: package_spec.rs  project.rs  targets.rs
crates/pixi-build-backend/src/utils/: test.rs
crates/pixi-build-backend/tests/integration/: protocol.rs
crates/pixi-build-backend/tests/integration/common/: model.rs
crates/pixi-build-cmake/: Cargo.toml
crates/pixi-build-cmake/src/: config.rs  main.rs
crates/pixi-build-mojo/: Cargo.toml
crates/pixi-build-mojo/src/: build_script.j2  build_script.rs  config.rs  main.rs  mojo.rs  protocol.rs
crates/pixi-build-mojo/src/snapshots/: pixi_build_mojo__tests__env_vars_are_set.snap.new  pixi_build_mojo__tests__input_globs_includes_extra_globs.snap  pixi_build_mojo__tests__input_globs_includes_extra_globs.snap.new  pixi_build_mojo__tests__max_is_in_build_requirements.snap.new  pixi_build_mojo__tests__max_is_not_added_if_max_is_already_present.snap.new  pixi_build_mojo__tests__mojo_bin_is_set.snap  pixi_build_mojo__tests__mojo_pkg_is_set.snap
crates/pixi-build-python/: Cargo.toml
crates/pixi-build-python/src/: build_script.rs  config.rs  main.rs  metadata.rs
crates/pixi-build-python/src/snapshots/: pixi_build_python__tests__input_globs_includes_extra_globs.snap  pixi_build_python__tests__input_globs_includes_extra_globs_editable.snap
crates/pixi-build-rattler-build/: Cargo.toml  pixi.toml
crates/pixi-build-rattler-build/src/: config.rs  protocol.rs  rattler_build.rs
crates/pixi-build-rattler-build/src/snapshots/: pixi_build_rattler_build__protocol__tests__conda_outputs@pin-subpackage-variants__recipe.yaml.snap  pixi_build_rattler_build__protocol__tests__conda_outputs@pin-subpackage__recipe.yaml.snap
crates/pixi-build-rust/: Cargo.toml
crates/pixi-build-rust/src/: config.rs  main.rs  metadata.rs
crates/pixi-build-rust/src/snapshots/: pixi_build_rust__build_script__test__openssl@bash.snap  pixi_build_rust__build_script__test__openssl@cmdexe.snap  pixi_build_rust__build_script__test__sccache@bash.snap  pixi_build_rust__build_script__test__sccache@cmdexe.snap
crates/recipe-stage0/src/: matchspec.rs  recipe.rs
crates/recipe-stage0/src/snapshots/: recipe_stage0__recipe__tests__recipe_to_yaml.snap
docs/: index.md
docs/backends/: pixi-build-cmake.md  pixi-build-mojo.md  pixi-build-python.md  pixi-build-rattler-build.md  pixi-build-ros.md  pixi-build-rust.md
docs/key_concepts/: compilers.md
py-pixi-build-backend/: Cargo.toml  pixi.toml
py-pixi-build-backend/examples/pixi-build-python/pixi_build_python/: python_generator.py
py-pixi-build-backend/pixi_build_backend/types/: __init__.py  generated_recipe.py  intermediate_recipe.py  metadata_provider.py  project_model.py
py-pixi-build-backend/src/: lib.rs
py-pixi-build-backend/src/recipe_stage0/: conditional.rs  recipe.rs
py-pixi-build-backend/src/types/: config.rs  generated_recipe.rs  metadata_provider.rs  mod.rs  project_model.rs
py-pixi-build-backend/tests/unit/: test_project_model.py
py-pixi-build-backend/tests/unit/__snapshots__/: test_project_model.ambr
recipe/: pixi-build-mojo.yaml  variants.yaml
recipe/pixi-build-api-version/: recipe.yaml
recipe/pixi-build-cmake/: recipe.yaml
recipe/pixi-build-mojo/: recipe.yaml
recipe/pixi-build-python/: recipe.yaml
recipe/pixi-build-rattler-build/: recipe.yaml
recipe/pixi-build-ros/: recipe.yaml
recipe/pixi-build-rust/: recipe.yaml
recipe/py-pixi-build-backend/: recipe.yaml
recipe/testsuite-backends/: recipe.yaml
scripts/: clean-outputs.py  copy-backends.py  generate-matrix.py
