[package]
name = "py-pixi-build-backend"
version = "0.2.0"
edition = "2024"

[lib]
name = "pixi_build_backend"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.24", features = [
  "extension-module",
  "abi3-py38",
  "serde",
  "py-clone",
  "experimental-async",
] }

pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"] }

# Core pixi-build dependencies (local crates)
pixi-build-backend = { path = "../crates/pixi-build-backend" }
recipe-stage0 = { path = "../crates/recipe-stage0" }


# Pixi types
pixi_build_types = "*"
pixi_manifest = "*"
pixi_spec = "*"
pixi_build_type_conversions = "*"
pixi_consts = "*"

# Core serialization and async support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "rt"] }
toml_edit = "0.22.24"
toml = "0.8"

rattler_conda_types = { version = "0.39.0", default-features = false }
rattler_package_streaming = { version = "0.23.1", default-features = false }
rattler_virtual_packages = { version = "2.0.9", default-features = false }

rattler-build = "*"

# Error handling
miette = "7.5.0"
thiserror = "2.0.12"

# We want to point to the latest known hash commit where rattler is not bumped yet
# and doesn't conflict with the pixi build types.
py-rattler = { git = "https://github.com/conda/rattler", rev = "ac1a946121f5b9d949e4b5f6229626795b00f39a" }

# Utilities
indexmap = "2.7.1"
pythonize = "0.24"
dict_derive = "0.6.0"
paste = "1.0.15"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.16.0"

[build-dependencies]
pyo3-build-config = "0.25"

# Prevent package from thinking it's in the workspace
[workspace]


[patch.crates-io]
pixi_build_types = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_consts = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_manifest = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_spec = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_build_type_conversions = { git = "https://github.com/prefix-dev/pixi", branch = "main" }

# Local path overrides for development
#pixi_build_types = { path = "../../pixi_build_types/crates/pixi_build_types" }
#pixi_consts = { path = "../../pixi/crates/pixi_consts" }
#pixi_manifest = { path = "../../pixi/crates/pixi_manifest" }
#pixi_spec = { path = "../../pixi/crates/pixi_spec" }
#pixi_build_type_conversions = { path = "../../pixi/crates/pixi_build_type_conversions" }

rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main" }
