[package]
name = "pixi-build-python"
version = "0.4.1"
edition.workspace = true

[features]
default = ["rustls-tls"]
rustls-tls = ["pixi-build-backend/rustls-tls"]
native-tls = ["pixi-build-backend/native-tls"]

[dependencies]
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml_edit = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
pyproject-toml = { workspace = true }
fs-err = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

pixi-build-backend = { workspace = true }

pixi_build_types = { workspace = true }

recipe-stage0 = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
toml_edit = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
